[package]
name = "link"
version = "1.0.0"
authors = [ "Nourman Hajar <your@site.com>" ]
edition = "2021"

[dependencies]
http = "0.2.8"
vercel_lambda = "*"
postgres = "*"
dotenv = "*"
serde_json = "*"
woothee = "*"

  [dependencies.postgres-types]
  version = "*"
  features = [ "derive", "with-serde_json-1" ]

  [dependencies.serde]
  version = "1.0.118"
  features = [ "derive" ]

[[bin]]
name = "_link_"
path = "/Users/nourman.hajar/Stuff/link/api/[link].rs"

[lib]
name = "util"
path = "_util.rs"